--- a/index.html
+++ b/index.html
@@ -4,9 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>백민경 포트폴리오</title>
+
+    <!-- 페이스북, 카카오톡 meta -->
+    <meta property="og:title" content="TRANSWELL" />
+    <meta property="og:url" content="https://bp2974.github.io/Transwell/" />
+    <meta property="og:image" content="./img/thumbnail.png" />
+    <meta property="og:description" content="당신의 완벽한 환승을 위해, 트랜스웰" />
+    <!-- 트위터 meta -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="TRANSWELL" />
+    <meta name="twitter:url" content="https://bp2974.github.io/Transwell/" />
+    <meta name="twitter:image" content="./img/thumbnail.png" />
+    <meta name="twitter:description" content="당신의 완벽한 환승을 위해, 트랜스웰" />
+    <!-- 프로젝트 설명 meta -->
+    <meta name="description" content="당신의 완벽한 환승을 위해, 트랜스웰" />
+    <meta name='keywords' content='공항, 비행기, 환승, 트랜스웰, 경유, 여행, 국제선' />
+    <!-- 파비콘 -->
+    <link rel="icon" href="./img/pavicon2.ico" sizes="16x16" />
+    <link rel="icon" href="./img/pavicon2.ico" sizes="32x32" />
+    <link rel="apple-touch-icon" href="./img/pavicon2.ico" sizes="180x180" />
+    <!-- css -->
+    <link rel='stylesheet' type='text/css' href='./css/reset.css' />
+    <link rel='stylesheet' type='text/css' href='./css/index.css' />
+    <!-- 폰트 -->
+    <link href="https://fonts.googleapis.com/css2?family=Hahmlet&family=Nanum+Gothic&display=swap" rel="stylesheet"/>
+    <!-- script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+    <script src="./js/index.js"></script>
+    <!-- aos -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
 <body>
-    
+    <header>
+        <h1 class="hide">백민경</h1>
+        <nav class="hide">
+            <ul>
+                <li>ABOUT</li>
+                <li>WORKS</li>
+                <li>CONTACT</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <img src="./img/logo.png" alt="로고">
+        <div>2022년 12월 14일 오픈</div>
+    </main>
+    <footer>
+        copyright(c) 2022 BMK All rights reserved
+    </footer>
 </body>
 </html>
