--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <main>
         <img src="./img/logo.png" alt="로고">
         <div>2022년 12월 14일 오픈</div>
+        <a href="https://transwell.kr/">작업물 미리보기</a>
     </main>
     <footer>
         copyright(c) 2022 BMK All rights reserved
