--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <meta name="description" content="백지같이 무한한 가능성을 지닌 웹퍼블리셔 백민경입니다." />
     <meta name='keywords' content='웹퍼블리셔, 포트폴리오, 계원예술대학교, 계원예대, 선린인고, 선린인터넷고등학교' />
     <!-- 파비콘 -->
-    <link rel="icon" href="" sizes="16x16" />
-    <link rel="icon" href="" sizes="32x32" />
-    <link rel="apple-touch-icon" href="" sizes="180x180" />
+    <link rel="icon" href="./img/favicon.ico" sizes="16x16" />
+    <link rel="icon" href="./img/favicon.ico" sizes="32x32" />
+    <link rel="apple-touch-icon" href="./img/favicon.ico" sizes="180x180" />
     <!-- css -->
     <link rel='stylesheet' type='text/css' href='./css/reset.css' />
     <link rel='stylesheet' type='text/css' href='./css/common.css' />
