--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
 
     <header>
-        <h1><a href="/">BMK</a></h1>
+        <h1><a href="./index.html">BMK</a></h1>
         <div class="hamburger_btn">
             <div class="hamburger_menu"><span></span><span></span><span></span></div>
         </div>
