--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </div>
                     
                     <sapn>Read Me!</sapn>
-                    <a href="./백민경 이력서.docx" download>Download Resume</a>
+                    <a href="./백민경 이력서.pdf" download>Download Resume</a>
                 </div>
                 <div class="profile_right">
                     <span>&emsp;&emsp;&emsp;&emsp;Infinite Possibilities</span>
@@ -334,17 +334,45 @@
                 </div>
                 <div class="work_info">
                     <div class="back_btn"><span></span><span></span><span></span></div>
-                    <a href="https://bp2974.github.io/TDOS/" target="_blank"><img src="./img/work1.png" alt="투데이올드스니커즈 썸네일"/></a>
+                    <a href="https://bp2974.github.io/2DayOldSneakers/" target="_blank"><img src="./img/work1.png" alt="투데이올드스니커즈 썸네일"/></a>
                     <div class="work_text">
                         <h2>2 Day Old Sneakers</h2>
                         <p>
                             개러지록 밴드 ‘투데이올드스니커즈’를 소개하는 팬페이지입니다.<br/><br/>
                             가장 처음으로 직접 만들어 본 웹사이트로 HTML구조와 CSS를 연습하기 위한 목적으로 만들었습니다. 이후 js를 배우고 아코디언 형식을 활용한 인터랙션을 추가하여 밴드의 키치함을 드러내며 곡들을 효율적으로 소개하고자 하였습니다.<br/><br/>
-                            개인제작 (기여도 100%)<br/><br/>
                             처음으로 제작한 페이지다보니 오래된 태그들이 많았고 문법적으로 맞지않는 부분들이 많아 수정하는 시간이 생각보다 오래걸렸습니다. 리메이크를 하면서 유지보수가 쉽게 제작하는 것이 중요하다는 걸 알 수 있었습니다.
                         </p>
+                        <h3>PART</h3>
+                        <p>개인제작 (기여도 100%)</p>
                         <h3>CODE</h3>
-                        <p>제작중</p>
+                        <img src="./img/work1_code1.PNG">
+                        <p>
+                            toggleClass를 활용한 햄버거 메뉴 구성.
+                        </p>
+                        <img src="./img/work1_code2.PNG">
+                        <p>
+                            for문을 통해 logo의 이미지 경로 변경, width 값 변경, 다양한 요소의 class 제어.
+                        </p>
+                        <img src="./img/work1_code3.PNG">
+                        <p>
+                            scrollTop 값에 따라 h1의 폰트 사이즈를 일정한 비율로 줄어들게 만듦.
+                        </p>
+                        <img src="./img/work1_code4.PNG">
+                        <p>
+                            페이지가 로드될 때 스크롤값에 맞는 폰트사이즈로 로드되도록 설정.
+                        </p>
+                        <img src="./img/work1_code4.PNG">
+                        <p>
+                            멤버의 프로필이 delay를 통해 순차적으로 나타나게 구성.
+                        </p>
+                        <img src="./img/work1_code6.PNG">
+                        <p>
+                            이미지 슬라이드를 위한 이미지 동적 생성.
+                        </p>
+                        <img src="./img/work1_code7.PNG">
+                        <p>
+                            배열에 mp3 파일들을 저장하고 for 반복문을 통해 멈춤 버튼을 눌렀을 때 toggleClass로 play 클래스를 제어, play 클래스 여부에 따라 이미지 경로를 바꾸거나 노래를 재생, 일시정지 할 수 있게 만든다. 다른 메뉴를 선택하게 되면 play 클래스를 제거, 재생 이미지도 변경하며, 재생되던 노래를 정지시키고  모든 mp3 파일의 재생시간을 0으로 초기화 시킨다.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -365,11 +393,14 @@
                         <p>
                             부모자녀 소통앱 ‘페어링’을 소개하는 페이지입니다.<br/><br/>
                             대한민국디자인전람회 출품을 위해 제작한 프로젝트입니다. 기획자, 디자이너와 협업할 수 있는 기회로 기획과 디자인에도 참여할 수 있는 기회였습니다.<br/><br/>
+                            비록 수상하진 못했지만 처음으로 기획자, 디자이너와 협력할 수 있었습니다. 생각보다 의견을 좁히는 것이 힘들었으며, 디자이너가 원하는 부분과 개발할 수 있는 부분이 맞지않아 어려움이 많다는 것을 깨달았습니다.
+                        </p>
+                        <h3>PART</h3>
+                        <p>
                             담당한 부분 (기여도 기획 40%, 디자인 20%, 개발 100%)<br/>
                             기획 - 아이디어제안, 페르소나 정의, 정보구조설계, 스토리보드 작성<br/>
                             디자인 - 앱, 웹디자인 초안 제작<br/>
-                            개발 - 전체<br/><br/>
-                            비록 수상하진 못했지만 처음으로 기획자, 디자이너와 협력할 수 있었습니다. 생각보다 의견을 좁히는 것이 힘들었으며, 디자이너가 원하는 부분과 개발할 수 있는 부분이 맞지않아 어려움이 많다는 것을 깨달았습니다.
+                            개발 - 전체
                         </p>
                         <h3>CODE</h3>
                         <img src="./img/work2_code1.PNG"/>
@@ -405,13 +436,16 @@
                         <p>
                             비행기 환승가이드 ‘트랜스웰’의 소개페이지입니다.<br/><br/>
                             처음으로 다른 개발자와 협업한 프로젝트로, 다른 사람의 코드를 받아 정리하는 것이 어려웠지만 그래도 같이 작업하는 동료가 있다는 점이 좋았습니다.<br/><br/>
+                            대학교 졸업작품으로 학과 우수작을 수상하였습니다.
+                        </p>
+                        <h3>PART</h3>
+                        <p>
                             담당한 부분 (기여도 기획 20%, 디자인 5%, 개발 98%)<br/>
                             기획 - 페르소나 정의, 정보구조설계, 스토리보드 작성<br/>
                             디자인 - 와이어프레임 제작<br/>
                             HTML - 스플래쉬 파트를 제외한 전체<br/>
                             CSS - 스플래쉬 파트를 제외한 전체<br/>
-                            JS - 전체<br/><br/>
-                            대학교 졸업작품으로 학과 우수작을 수상하였습니다.
+                            JS - 전체
                         </p>
                         <h3>CODE</h3>
                         <img src="./img/work3_code1.PNG"/>
