--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         </nav>
     </header>
 
+    <aside>
+        <button>Read Me!</button>
+    </aside>
+
     <main>
         <section id="main">
             <h2>백지같이<br/>무한한 가능성을 지닌</h2>
