--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
 
     <aside>
-        <button>Read Me!</button>
+        <a href="./백민경 이력서.pdf" download><button>Read Me!</button></a>
     </aside>
 
     <main>
