--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@
                 <div class="profile_right">
                     <span>&emsp;&emsp;&emsp;&emsp;Infinite Possibilities</span>
                     <h2>백지같이 <span>무한한 가능성</span>을 지닌 <span>백민경</span>입니다.</h2>
-                    <p>특성화고등학교를 다니며 C언어부터 파이썬 등 다양한 언어를 접할 기회가 많아 프로그래밍에 대한 관심이 많아지던 중, 고등학교 3학년 때 웹디자인기능사를 준비하며 배운 HTML이 너무 재밌어서 뒤늦게 웹퍼블리셔로 진로를 정하게 됩니다.</p>
-                    <p>웹퍼블리싱에 대해 더 배우고 싶어서 기획자, 디자이너와 협업할 기회가 있는 계원예술대학교에 진학을 결심했지만 첫 도전에 실패하고 재수를 통해 합격했습니다. 이와 통해 목표를 정하면 <span>포기하지 않는 집녑</span>을 가지고 있단 걸 알 수 있었고, 대학 생활을 하며 <span>시간 약속을 중요하게 생각</span>하고, <span>호기심</span>이 많아 여러가지에 도전하는 성격을 지녔습니다.</p>
+                    <div class="flex">
+                        <p>특성화고등학교를 다니며 C언어부터 파이썬 등 다양한 언어를 접할 기회가 많아 프로그래밍에 대한 관심이 많아지던 중, 고등학교 3학년 때 웹디자인기능사를 준비하며 배운 HTML이 너무 재밌어서 뒤늦게 웹퍼블리셔로 진로를 정하게 됩니다.</p>
+                        <p>웹퍼블리싱에 대해 더 배우고 싶어서 기획자, 디자이너와 협업할 기회가 있는 계원예술대학교에 진학을 결심했지만 첫 도전에 실패하고 재수를 통해 합격했습니다. 이와 통해 목표를 정하면 <span>포기하지 않는 집녑</span>을 가지고 있단 걸 알 수 있었고, 대학 생활을 하며 <span>시간 약속을 중요하게 생각</span>하고, <span>호기심</span>이 많아 여러가지에 도전하는 성격을 지녔습니다.</p>
+                    </div>
                 </div>
             </div>
 
